# gpu-dockerfile-generator

./: .gitignore  INSTALL.md  LICENSE  QUICK_REFERENCE.md  README.md  pyproject.toml
examples/: advanced-config.yaml  basic-config.yaml  tensorflow-config.yaml
src/: __init__.py  cli.py  config.py  generator.py
src/templates/: base.j2
src/templates/components/: conda_setup.j2  github_cli.j2  nvidia_base.j2  proxy_setup.j2  python_setup.j2  ssh_setup.j2  system_packages.j2
tests/: test_config.py  test_generator.py
